--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
           <div class="footer__columns">
             <div class="footer__column footer__column_content_copyright">
               <div class="logo logo_place_footer"></div>
-              <p class="footer__author">&copy; 2020. Сергей Мусаилов</p>
+              <p class="footer__author">&copy; 2024. Постников Илья</p>
             </div>
             <nav class="footer__column footer__column_content_info">
               <h4 class="footer__column-heading">О Практикуме</h4>
